updated the number of results returned and fixed som layout issues

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -171,7 +171,7 @@ body{
     width:100% !important;
   }
   .form-field-text{
-    width:98.5%;
+    width:97.5%;
     height:30px;
   }
   .searchFormSubmit{
